--- a/ustanovka-gbo.html
+++ b/ustanovka-gbo.html
@@ -285,6 +285,240 @@
             </div>
           </div>
         </section>
+        <section class="service-gbo">
+          <h2 class="service-gbo-title">
+            Мы устанавливаем профессионально, надёжно, с гарантией!
+          </h2>
+          <div class="service-gbo-cards">
+            <div class="service-gbo-card">
+              <img
+                class="service-gbo-img"
+                src="./src/img/gbo/serv-gbo-img1.jpg"
+                alt=""
+              />
+              <h3 class="service-gbo-h3">Установка ГБО</h3>
+              <ul class="service-gbo-list">
+                <li>
+                  <svg
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M5 12L10 17L20 7"
+                      stroke="#24a7c1"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                    />
+                  </svg>
+                  <p>На любой тип двигателя</p>
+                </li>
+                <li>
+                  <svg
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M5 12L10 17L20 7"
+                      stroke="#24a7c1"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                    />
+                  </svg>
+                  <p>На любой тип транспорта</p>
+                </li>
+                <li>
+                  <svg
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M5 12L10 17L20 7"
+                      stroke="#24a7c1"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                    />
+                  </svg>
+                  <p>2-е, 4-е, gdi, tfsi - системмы</p>
+                </li>
+              </ul>
+            </div>
+            <div class="service-gbo-card">
+              <img
+                class="service-gbo-img"
+                src="./src/img/gbo/serv-gbo-img3.jpg"
+                alt=""
+              />
+              <h3 class="service-gbo-h3">Обслуживание и ремонт ГБО</h3>
+              <ul class="service-gbo-list">
+                <li>
+                  <svg
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M5 12L10 17L20 7"
+                      stroke="#24a7c1"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                    />
+                  </svg>
+                  <p>Регулировка расхода газа</p>
+                </li>
+                <li>
+                  <svg
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M5 12L10 17L20 7"
+                      stroke="#24a7c1"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                    />
+                  </svg>
+                  <p>Замена РТИ</p>
+                </li>
+                <li>
+                  <svg
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M5 12L10 17L20 7"
+                      stroke="#24a7c1"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                    />
+                  </svg>
+                  <p>Устранение запахов газа в салоне</p>
+                </li>
+              </ul>
+            </div>
+            <div class="service-gbo-card">
+              <img
+                class="service-gbo-img"
+                src="./src/img/gbo/serv-gbo-img2.jpg"
+                alt=""
+              />
+              <h3 class="service-gbo-h3">Диагновстика авто</h3>
+              <ul class="service-gbo-list">
+                <li>
+                  <svg
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M5 12L10 17L20 7"
+                      stroke="#24a7c1"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                    />
+                  </svg>
+                  <p>Диагностика топливных систем</p>
+                </li>
+                <li>
+                  <svg
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M5 12L10 17L20 7"
+                      stroke="#24a7c1"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                    />
+                  </svg>
+                  <p>Диагновстика электронных систем</p>
+                </li>
+                <li>
+                  <svg
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M5 12L10 17L20 7"
+                      stroke="#24a7c1"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                    />
+                  </svg>
+                  <p>Диагностика ГБО</p>
+                </li>
+              </ul>
+            </div>
+            <div class="service-gbo-card">
+              <img
+                class="service-gbo-img"
+                src="./src/img/gbo/serv-gbo-img4.jpg"
+                alt=""
+              />
+              <h3 class="service-gbo-h3">Регистрация в МРЕО</h3>
+              <ul class="service-gbo-list">
+                <li>
+                  <svg
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M5 12L10 17L20 7"
+                      stroke="#24a7c1"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                    />
+                  </svg>
+                  <p>Гарантия на регистрацию</p>
+                </li>
+                <li>
+                  <svg
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M5 12L10 17L20 7"
+                      stroke="#24a7c1"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                    />
+                  </svg>
+                  <p>Полный пакет документов</p>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </section>
         <section class="benefits-section">
           <h2 class="benefits-title">
             Почему <span class="span-benefits-title"> выбирают нас</span>
