--- a/foto-gallery.html
+++ b/foto-gallery.html
@@ -38,7 +38,9 @@
           <li class="nav-item">
             <a href="./parts.html">Подбор запчастей</a>
           </li>
-          <li class="nav-item"><a href="./GBO.html">Установка ГБО</a></li>
+          <li class="nav-item">
+            <a href="./ustanovka-gbo.html">Установка ГБО</a>
+          </li>
 
           <li class="nav-item dropdown">
             <a href="./service-catalog.html">Услуги</a>
@@ -63,7 +65,7 @@
               </li>
               <li><a href="./service-catalog.html#gbo">ГБО</a></li>
               <li><a href="">Діагностика</a></li>
-              <li><a href="">Чіп тюнінг</a></li>
+              <li><a href="">Програмне тюнінгування</a></li>
             </ul>
           </li>
           <li class="nav-item">
