--- a/parts.html
+++ b/parts.html
@@ -109,18 +109,42 @@
     <main>
       <div class="container">
         <section class="hero-parts">
-          <div class="hero-content">
-            <h1 class="hero-title">МАГАЗИН АВТОЗАПЧАСТЕЙ НА АС "КАСКАД"</h1>
-            <button
-              type="button"
-              onclick="window.location.href='#callbackForm'"
-              class="details-hero-btn"
-            >
-              ЗАКАЗАТЬ ЗАПЧАСТЬ
-            </button>
-            <p class="discount">
-              Скидка 50% на первый подбор запчастей по промокоду "АС КАСКАД"
-            </p>
+          <div>
+            <div class="hero-content">
+              <h1 class="hero-title">МАГАЗИН АВТОЗАПЧАСТЕЙ НА АС "КАСКАД"</h1>
+              <button
+                type="button"
+                onclick="window.location.href='#callbackForm'"
+                class="details-hero-btn"
+              >
+                ЗАКАЗАТЬ ЗАПЧАСТЬ
+              </button>
+              <p class="discount">
+                Скидка 50% на первую диагностику по промокоду "АС КАСКАД"
+              </p>
+            </div>
+            <div class="hero-contact-div">
+              <h3>Едь к нам прямо сейчас:</h3>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2642.1671695603704!2d35.83380167638042!3d48.53002797128957!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40deb744fd3bfc69%3A0x36392c7691b6bb0d!2z0KHQotCeINCa0LDRgdC60LDQtA!5e0!3m2!1sru!2sua!4v1749836072193!5m2!1sru!2sua"
+                width="250"
+                height="200"
+                style="border-radius: 20px"
+                class="iframe"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+              <div class="hero-contact-number">
+                <h3>Ждем твоего звонка:</h3>
+                <a href="tel:+380668375666" class="number-link"
+                  >+38 (066) 837−56−66</a
+                >
+                <a href="tel:+380962110210" class="number-link"
+                  >+38 (096) 211−02−10</a
+                >
+              </div>
+            </div>
           </div>
         </section>
         <section class="parts-section">
