--- a/ustanovka-gbo.html
+++ b/ustanovka-gbo.html
@@ -109,71 +109,97 @@
     <main>
       <div class="container">
         <section class="hero-gbo">
-          <div class="hero-content">
-            <h1 class="hero-title">ГАЗОБАЛЛОННОЕ ОБОРУДОВАНИЕ В ПАВЛОГРАДЕ</h1>
-            <div class="hero-content-container">
-              <div>
-                <svg
-                  width="28"
-                  height="28"
-                  viewBox="0 0 28 28"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M8 14H20M14 8L20 14L14 20"
-                    stroke="white"
-                    stroke-width="1.8"
-                    stroke-linecap="round"
-                  />
-                </svg>
-                <p>Установка, обслуживание и ремонт!</p>
+          <div>
+            <div class="hero-content">
+              <h1 class="hero-title">
+                ГАЗОБАЛЛОННОЕ ОБОРУДОВАНИЕ В ПАВЛОГРАДЕ
+              </h1>
+              <div class="hero-content-container">
+                <div>
+                  <svg
+                    width="28"
+                    height="28"
+                    viewBox="0 0 28 28"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M8 14H20M14 8L20 14L14 20"
+                      stroke="white"
+                      stroke-width="1.8"
+                      stroke-linecap="round"
+                    />
+                  </svg>
+                  <p>Установка, обслуживание и ремонт!</p>
+                </div>
+                <div>
+                  <svg
+                    width="28"
+                    height="28"
+                    viewBox="0 0 28 28"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M8 14H20M14 8L20 14L14 20"
+                      stroke="white"
+                      stroke-width="1.8"
+                      stroke-linecap="round"
+                    />
+                  </svg>
+                  <p>Только лучшие, проверенные бренды!</p>
+                </div>
+                <div>
+                  <svg
+                    width="28"
+                    height="28"
+                    viewBox="0 0 28 28"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M8 14H20M14 8L20 14L14 20"
+                      stroke="white"
+                      stroke-width="1.8"
+                      stroke-linecap="round"
+                    />
+                  </svg>
+                  <p>Разбираемся во всех ходовых системах!</p>
+                </div>
               </div>
-              <div>
-                <svg
-                  width="28"
-                  height="28"
-                  viewBox="0 0 28 28"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
+              <button
+                type="button"
+                onclick="window.location.href='#callbackForm'"
+                class="details-hero-btn"
+              >
+                ЗАПИСАТЬСЯ НА ДИАГНОСТИКУ
+              </button>
+              <p class="discount">
+                Скидка 50% на первую замену фильтров по промокоду "АС КАСКАД"
+              </p>
+            </div>
+            <div class="hero-contact-div">
+              <h3>Едь к нам прямо сейчас:</h3>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2642.1671695603704!2d35.83380167638042!3d48.53002797128957!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40deb744fd3bfc69%3A0x36392c7691b6bb0d!2z0KHQotCeINCa0LDRgdC60LDQtA!5e0!3m2!1sru!2sua!4v1749836072193!5m2!1sru!2sua"
+                width="250"
+                height="200"
+                style="border-radius: 20px"
+                class="iframe"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+              <div class="hero-contact-number">
+                <h3>Ждем твоего звонка:</h3>
+                <a href="tel:+380668375666" class="number-link"
+                  >+38 (066) 837−56−66</a
                 >
-                  <path
-                    d="M8 14H20M14 8L20 14L14 20"
-                    stroke="white"
-                    stroke-width="1.8"
-                    stroke-linecap="round"
-                  />
-                </svg>
-                <p>Только лучшие, проверенные бренды!</p>
-              </div>
-              <div>
-                <svg
-                  width="28"
-                  height="28"
-                  viewBox="0 0 28 28"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
+                <a href="tel:+380962110210" class="number-link"
+                  >+38 (096) 211−02−10</a
                 >
-                  <path
-                    d="M8 14H20M14 8L20 14L14 20"
-                    stroke="white"
-                    stroke-width="1.8"
-                    stroke-linecap="round"
-                  />
-                </svg>
-                <p>Разбираемся во всех ходовых системах!</p>
               </div>
             </div>
-            <button
-              type="button"
-              onclick="window.location.href='#callbackForm'"
-              class="details-hero-btn"
-            >
-              ЗАПИСАТЬСЯ НА ДИАГНОСТИКУ
-            </button>
-            <p class="discount">
-              Скидка 50% на первую замену фильтров по промокоду "АС КАСКАД"
-            </p>
           </div>
         </section>
         <section class="gbo-section">
@@ -187,8 +213,8 @@
                 — это место, где вы сможете безопасно, удобно и с комфортом
                 решить все вопросы, связанные с установкой и обслуживанием ГБО
                 для вашего автомобиля. Мы гарантируем высочайшее качество работ,
-                приятные подарки каждому клиенту, полный комплекс услуг и
-                по-настоящему внимательный сервис.
+                индивидуальный подход к каждому автомобилю и клиенту. Полный
+                комплекс услуг и по-настоящему внимательный сервис.
               </p>
               <ul class="gbo-list">
                 <li>
@@ -223,7 +249,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  Гарантия на работу и оборудование до 24 мес.
+                  Гарантия на работу и оборудование до 12 мес.
                 </li>
                 <li>
                   <svg
@@ -376,7 +402,7 @@
                       stroke-linecap="round"
                     />
                   </svg>
-                  <p>Регулировка расхода газа</p>
+                  <p>Правильная регулировка расхода газа</p>
                 </li>
                 <li>
                   <svg
