--- a/index.html
+++ b/index.html
@@ -110,71 +110,95 @@
     <main>
       <div class="container">
         <section class="hero">
-          <div class="hero-content">
-            <h1 class="hero-title">РЕМОНТ И ОБСЛУЖИВАНИЕ АВТО</h1>
-            <div class="hero-content-container">
-              <div>
-                <svg
-                  width="28"
-                  height="28"
-                  viewBox="0 0 28 28"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M8 14H20M14 8L20 14L14 20"
-                    stroke="white"
-                    stroke-width="1.8"
-                    stroke-linecap="round"
-                  />
-                </svg>
-                <p>лучшее соотношение цена/качество</p>
+          <div>
+            <div class="hero-content">
+              <h1 class="hero-title">РЕМОНТ И ОБСЛУЖИВАНИЕ АВТО</h1>
+              <div class="hero-content-container">
+                <div>
+                  <svg
+                    width="28"
+                    height="28"
+                    viewBox="0 0 28 28"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M8 14H20M14 8L20 14L14 20"
+                      stroke="white"
+                      stroke-width="1.8"
+                      stroke-linecap="round"
+                    />
+                  </svg>
+                  <p>лучшее соотношение цена/качество</p>
+                </div>
+                <div>
+                  <svg
+                    width="28"
+                    height="28"
+                    viewBox="0 0 28 28"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M8 14H20M14 8L20 14L14 20"
+                      stroke="white"
+                      stroke-width="1.8"
+                      stroke-linecap="round"
+                    />
+                  </svg>
+                  <p>гарантии на все виды работ</p>
+                </div>
+                <div>
+                  <svg
+                    width="28"
+                    height="28"
+                    viewBox="0 0 28 28"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M8 14H20M14 8L20 14L14 20"
+                      stroke="white"
+                      stroke-width="1.8"
+                      stroke-linecap="round"
+                    />
+                  </svg>
+                  <p>оригинальные запчасти</p>
+                </div>
               </div>
-              <div>
-                <svg
-                  width="28"
-                  height="28"
-                  viewBox="0 0 28 28"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
+              <button
+                type="button"
+                onclick="window.location.href='#callbackForm'"
+                class="details-hero-btn"
+              >
+                ЗАПИСАТЬСЯ
+              </button>
+              <p class="discount">
+                Скидка 50% на первую диагностику по промокоду "АС КАСКАД"
+              </p>
+            </div>
+            <div class="hero-contact-div">
+              <h3>Едь к нам прямо сейчас:</h3>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2642.1671695603704!2d35.83380167638042!3d48.53002797128957!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40deb744fd3bfc69%3A0x36392c7691b6bb0d!2z0KHQotCeINCa0LDRgdC60LDQtA!5e0!3m2!1sru!2sua!4v1749836072193!5m2!1sru!2sua"
+                width="250"
+                height="200"
+                style="border-radius: 20px"
+                class="iframe"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+              <div class="hero-contact-number">
+                <h3>Ждем твоего звонка:</h3>
+                <a href="tel:+380668375666" class="number-link"
+                  >+38 (066) 837−56−66</a
                 >
-                  <path
-                    d="M8 14H20M14 8L20 14L14 20"
-                    stroke="white"
-                    stroke-width="1.8"
-                    stroke-linecap="round"
-                  />
-                </svg>
-                <p>гарантии на все виды работ</p>
-              </div>
-              <div>
-                <svg
-                  width="28"
-                  height="28"
-                  viewBox="0 0 28 28"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
+                <a href="tel:+380962110210" class="number-link"
+                  >+38 (096) 211−02−10</a
                 >
-                  <path
-                    d="M8 14H20M14 8L20 14L14 20"
-                    stroke="white"
-                    stroke-width="1.8"
-                    stroke-linecap="round"
-                  />
-                </svg>
-                <p>оригинальные запчасти</p>
               </div>
             </div>
-            <button
-              type="button"
-              onclick="window.location.href='#callbackForm'"
-              class="details-hero-btn"
-            >
-              ЗАПИСАТЬСЯ
-            </button>
-            <p class="discount">
-              Скидка 50% на первую диагностику по промокоду "АС КАСКАД"
-            </p>
           </div>
         </section>
         <section class="main-content-section">
@@ -829,7 +853,7 @@
         </div>
         <div class="bot-footer">
           <iframe
-            src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d262.7286342547718!2d35.83691716651164!3d48.530077092994496!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sru!2sua!4v1749559352690!5m2!1sru!2sua"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2642.1671695603704!2d35.83380167638042!3d48.53002797128957!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40deb744fd3bfc69%3A0x36392c7691b6bb0d!2z0KHQotCeINCa0LDRgdC60LDQtA!5e0!3m2!1sru!2sua!4v1749836072193!5m2!1sru!2sua"
             width="400"
             height="300"
             style="border-radius: 10px"
