--- a/index.html
+++ b/index.html
@@ -166,11 +166,7 @@
                   <p>оригинальные запчасти</p>
                 </div>
               </div>
-              <button
-                type="button"
-                onclick="window.location.href='#callbackForm'"
-                class="details-hero-btn"
-              >
+              <button type="button" class="details-hero-btn" id="openModalBtn">
                 ЗАПИСАТЬСЯ
               </button>
               <p class="discount">
@@ -539,7 +535,14 @@
                   type="text"
                   id="nameInput"
                   name="name"
-                  placeholder="Ваше имя"
+                  placeholder="Ваше имя*"
+                  required
+                />
+                <input
+                  type="tel"
+                  id="phoneInput"
+                  name="phone"
+                  placeholder="+380 50 025 25 25*"
                   required
                 />
                 <input
@@ -547,13 +550,6 @@
                   id="messageInput"
                   name="car"
                   placeholder="Марка модель авто"
-                  required
-                />
-                <input
-                  type="tel"
-                  id="phoneInput"
-                  name="phone"
-                  placeholder="+380 50 025 25 25"
                   required
                 />
                 <button type="submit" class="text-header">
@@ -768,6 +764,47 @@
       <script type="module" src="./js/1-gallery.js" defer></script>
       <script type="module" src="./src/js/main.js"></script>
       <script type="module" src="./src/js/language.js"></script>
+      <!-- Модальное окно -->
+      <div id="callbackModal" class="modal">
+        <div class="modal-content">
+          <span class="modal-close">&times;</span>
+          <h3>Оставте Ваши данные и мы перезвоним с готовым решением.</h3>
+          <form class="modal-callbackForm" id="modalForm">
+            <div class="form-group">
+              <label for="name">Имя*</label>
+              <input type="text" id="modalName" name="name" required />
+            </div>
+            <div class="form-group">
+              <label for="phone">Телефон*</label>
+              <input type="tel" id="modalPhone" name="phone" required />
+            </div>
+            <div class="form-group">
+              <label for="vin">VIN код автомобиля</label>
+              <input type="text" id="modalVin" name="vin" />
+            </div>
+            <div class="form-group">
+              <label for="carModel">Марка/модель автомобиля</label>
+              <input type="text" id="modalCar" name="carModel" />
+            </div>
+            <button type="submit" class="submit-btn">Отправить</button>
+          </form>
+        </div>
+      </div>
+      <div class="social-fixed">
+        <a
+          href="https://t.me/ваш_телеграм"
+          target="_blank"
+          class="social-btn telegram"
+        >
+          <i class="fab fa-telegram social-icon"></i>
+        </a>
+        <a href="viber://chat?number=+380668375666" class="social-btn viber">
+          <i class="fab fa-viber social-icon"></i>
+        </a>
+        <a href="tel:+380668375666" class="social-btn phone">
+          <i class="fas fa-phone social-icon"></i>
+        </a>
+      </div>
     </main>
   </body>
   <footer id="map-section">
