--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
               <li><a href="">Програмне тюнінгування</a></li>
             </ul>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a href="./contacts.html">Контакты</a>
-          </li>
+          </li> -->
           <li class="nav-item"><a href="./price.html">Цены</a></li>
         </ul>
       </nav>
@@ -761,7 +761,7 @@
           </div>
         </section>
       </div>
-      <script type="module" src="./js/1-gallery.js" defer></script>
+      <script type="module" src="./src/js/1-gallery.js" defer></script>
       <script type="module" src="./src/js/main.js"></script>
       <script type="module" src="./src/js/language.js"></script>
       <!-- Модальное окно -->
